Añadir .gitignore correcto para limpiar el repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,38 @@
-# Archivos de usuario de Xcode
-*.xcuserdatad
-*.xcuserstate
-*.xcworkspace
-*.xcworkspace/xcuserdata/
-*.xcodeproj/project.xcworkspace/
-*.xcodeproj/xcuserdata/
+# Xcode
+build/
+DerivedData/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
 
-# macOS
-.DS_Store
+# SwiftPM
+.build/
+
+# CocoaPods
+Pods/
+
+# Carthage
+Carthage/Build/
+
+# Accidental files
+*.xcuserstate
+*.moved-aside
+*.xcscmblueprint
+*.DS_Store
 
 # Swift Package Manager
-.build/
-Packages/
-DerivedData/
+Package.resolved
 
-# Archivos temporales
-*.swp
-*.lock
-*.log
+# fastlane
+fastlane/report.xml
+fastlane/screenshots
+fastlane/test_output
+
+# App-specific
+*.xcworkspace
